--- a/index.html
+++ b/index.html
@@ -413,8 +413,8 @@
               <div class="details-container color-container">
                 <div class="article-container">
                   <img
-                    src="./assets/projects/social.jpg"
-                    alt="Project 1"
+                    src="./assets/projects/jano.jpg"
+                    alt="Project 2"
                     class="project-img"
                   />
                 </div>
@@ -428,7 +428,7 @@
                   </button>
                   <button
                     class="btn btn-color-2 project-btn"
-                    onclick="location.href='https://social-media-rho-lac.vercel.app/'"
+                    onclick="location.href='https://mahabub-frontend.vercel.app/'"
                   >
                     Live Demo
                   </button>
